# Poisson2D-amg-lib

./: CMakeLists.txt  README.md
include/: solver.h
src/: CMakeLists.txt  amg_level.cpp  amg_output.cpp  amg_setup.cpp  amg_solve_components.cpp  amg_solvers.cpp  amg_tests.cpp  matrix.cpp  solver.cpp
src/h/: amg_benchmark.h  amg_define.h  amg_level.h  amg_output.h  amg_setup.h  amg_solve_components.h  amg_solvers.h  amg_tests.h  benchmark.h  matrix.h  smoothing.h
